Fixed font size of name for smaller devices, hopefully fixed pictures stretching

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -221,10 +221,17 @@ button:focus {
 	}
 
 	.me {
-		min-height: 80%;
+		height: auto;
 		min-width: 80%;
 
 	}
+
+	@media screen and (max-width: 500px) {
+		h1 {
+		font-size: 3.25em;
+	}
+	}
+	
 
 
 }
